--- a/dnn/Algorithms/apx_3DSP/3DSP/3DSP/example.1.edge
+++ b/dnn/Algorithms/apx_3DSP/3DSP/3DSP/example.1.edge
@@ -1,167 +1,598 @@
-166  1
-    1    144   323  -1
-    2     35   201  -1
-    3     38   134  -1
-    4     14   211  -1
-    5      5     6  -1
-    6     73   261  -1
-    7     40    81  -1
-    8     26   104  -1
-    9     72   244  -1
-   10     44   225  -1
-   11     27   376  -1
-   12     98   232  -1
-   13     30   112  -1
-   14     22    26  -1
-   15     17   106  -1
-   16     92   218  -1
-   17    120    12  -1
-   18      4    85  -1
-   19    104    25  -1
-   20     47   162  -1
-   21    118   103  -1
-   22     94   157  -1
-   23    102    49  -1
-   24     81     7  -1
-   25    117    40  -1
-   26     29   391  -1
-   27     46   236  -1
-   28     79     8  -1
-   29     26   148  -1
-   30     18   193  -1
-   31     42   221  -1
-   32     12     9  -1
-   33     77   284  -1
-   34     10     6  -1
-   35    112    29  -1
-   36      5     9  -1
-   37     83   289  -1
-   38     11     7  -1
-   39    106    36  -1
-   40     16   262  -1
-   41     76    30  -1
-   42     12     8  -1
-   43    103     5  -1
-   44     49    46  -1
-   45     31   269  -1
-   46     24   259  -1
-   47    123   189  -1
-   48      1   315  -1
-   49      2   309  -1
-   50     17   195  -1
-   51     22   145  -1
-   52     16   206  -1
-   53     10   192  -1
-   54     48   314  -1
-   55      4    76  -1
-   56     33   176  -1
-   57      2   243  -1
-   58    173   212  -1
-   59     43   152  -1
-   60     14   199  -1
-   61     32   168  -1
-   62    108   357  -1
-   63     15   142  -1
-   64     19   131  -1
-   65     45    44  -1
-   66     74   263  -1
-   67      8   118  -1
-   68      5    90  -1
-   69      9   147  -1
-   70     24   282  -1
-   71     39   128  -1
-   72     36   126  -1
-   73     23   155  -1
-   74     95   160  -1
-   75     21   303  -1
-   76     86     3  -1
-   77     28   300  -1
-   78      7    79  -1
-   79     90   102  -1
-   80     34   220  -1
-   81     11   120  -1
-   82    244   330  -1
-   83     82     8  -1
-   84     20   203  -1
-   85     23   156  -1
-   86     91   271  -1
-   87     15   277  -1
-   88     93   124  -1
-   89     78   283  -1
-   90     13   171  -1
-   91      3    83  -1
-   92     99   184  -1
-   93      6   291  -1
-   94     41   117  -1
-   95     37    86  -1
-   96    124    23  -1
-   97    126    18  -1
-   98    128    19  -1
-   99    131    74  -1
-  100    134    15  -1
-  101    137    72  -1
-  102    142    19  -1
-  103    190   326  -1
-  104    145    93  -1
-  105    147    10  -1
-  106    148    94  -1
-  107    150     6  -1
-  108    152   150  -1
-  109    155    27  -1
-  110    156    77  -1
-  111    157    27  -1
-  112    159    78  -1
-  113    160     7  -1
-  114    162    48  -1
-  115    168    13  -1
-  116    169     1  -1
-  117    171    35  -1
-  118     25   217  -1
-  119    176    17  -1
-  120    184    25  -1
-  121    189     2  -1
-  122     85   327  -1
-  123    192    11  -1
-  124    193    39  -1
-  125    195    13  -1
-  126    199    38  -1
-  127    201    14  -1
-  128    203    33  -1
-  129    206    32  -1
-  130    211    18  -1
-  131    212    34  -1
-  132    217    21  -1
-  133    218    42  -1
-  134    220   123  -1
-  135    221    43  -1
-  136    225    92  -1
-  137    232    21  -1
-  138    236    91  -1
-  139    243   190  -1
-  140    284   336  -1
-  141    259    98  -1
-  142    261     4  -1
-  143    262    20  -1
-  144    263    20  -1
-  145    269   169  -1
-  146    271    47  -1
-  147    277   137  -1
-  148    282    28  -1
-  149    283    28  -1
-  150      3   342  -1
-  151    289    41  -1
-  152    291    95  -1
-  153    300    99  -1
-  154    303   108  -1
-  155    309    45  -1
-  156    314     1  -1
-  157    315   173  -1
-  158    323    73  -1
-  159    326    37  -1
-  160    327    31  -1
-  161    330    16  -1
-  162    336    24  -1
-  163    342   144  -1
-  164    357    22  -1
-  165    376   159  -1
-  166    391    82  -1
+596  1
+    0     58    44  0
+    1     58     1  0
+    2     13     1  0
+    3     13    44  0
+    4     13    58  0
+    5      1    44  -1
+    6     79    76  0
+    7     79    73  0
+    8     19    73  -1
+    9     19    76  0
+   10     19    79  0
+   11     73    76  0
+   12     27    81  0
+   13     27    49  0
+   14     23    49  0
+   15     23    81  0
+   16     23    27  -1
+   17     49    81  0
+   18    106    76  0
+   19    106    18  0
+   20     22    18  0
+   21     22    76  -1
+   22     22   106  0
+   23     18    76  0
+   24     63    22  0
+   25     63    26  0
+   26     62    26  0
+   27     62    22  0
+   28     62    63  0
+   29     26    22  -1
+   30     83    72  0
+   31     83    71  0
+   32     15    71  -1
+   33     15    72  0
+   34     15    83  0
+   35     71    72  0
+   36     92   101  0
+   37     92    21  -1
+   38     96    21  0
+   39     96   101  0
+   40     96    92  0
+   41     21   101  0
+   42     60    37  0
+   43     60    38  0
+   44     57    38  0
+   45     57    37  0
+   46     57    60  0
+   47     38    37  0
+   48     34    86  0
+   49     34    12  -1
+   50     53    12  0
+   51     53    86  0
+   52     53    34  0
+   53     12    86  0
+   54    105    35  0
+   55    105    32  0
+   56     16    32  -1
+   57     16    35  -1
+   58     16   105  0
+   59     32    35  0
+   60     61    18  0
+   61     61    60  0
+   62     40    60  0
+   63     40    18  0
+   64     40    61  0
+   65     60    18  0
+   66    106   101  0
+   67    106    92  0
+   68     96   106  0
+   69    100    99  0
+   70    100    97  0
+   71     49    97  0
+   72     49    99  0
+   73     49   100  0
+   74     97    99  0
+   75     88    13  0
+   76     88    37  0
+   77     36    37  0
+   78     36    13  0
+   79     36    88  0
+   80     37    13  -1
+   81    116    77  0
+   82    116   104  0
+   83     97   104  0
+   84     97    77  0
+   85     97   116  0
+   86    104    77  0
+   87    115   112  0
+   88    115    94  0
+   89     93    94  0
+   90     93   112  0
+   91     93   115  0
+   92     94   112  0
+   93     79    78  0
+   94     79    77  0
+   95     27    77  -1
+   96     27    78  0
+   97     27    79  0
+   98     77    78  0
+   99    118   116  0
+  100    118    97  0
+  101    100   116  0
+  102    100   118  0
+  103     82    72  0
+  104     82    14  0
+  105      2    14  0
+  106      2    72  -1
+  107      2    82  -1
+  108     14    72  0
+  109     56    61  0
+  110     56    18  0
+  111     60    56  0
+  112     85    60  0
+  113     85    36  -1
+  114     14    36  0
+  115     14    60  0
+  116     14    85  0
+  117     36    60  0
+  118     82    74  0
+  119     72    74  0
+  120     14    74  0
+  121     55    46  0
+  122     55    16  0
+  123     90    16  0
+  124     90    46  -1
+  125     90    55  0
+  126     16    46  0
+  127     83    84  0
+  128     72    84  0
+  129     84    15  0
+  130     75    72  0
+  131     75     3  -1
+  132     15     3  0
+  133     15    75  0
+  134      3    72  -1
+  135    114   102  0
+  136    114    19  0
+  137     23    19  0
+  138     23   102  0
+  139     23   114  0
+  140     19   102  0
+  141    111     8  0
+  142    111     9  0
+  143      4     9  0
+  144      4     8  -1
+  145      4   111  0
+  146      9     8  -1
+  147     79    74  0
+  148     73    74  0
+  149     19    74  0
+  150     23    76  -1
+  151     23    79  0
+  152     85    83  0
+  153     36    83  0
+  154     14    83  0
+  155    111     5  0
+  156    111    94  0
+  157      4    94  0
+  158      4     5  -1
+  159     94     5  -1
+  160     14    37  -1
+  161     14    38  0
+  162     96    95  0
+  163     96    41  0
+  164     92    41  0
+  165     92    95  0
+  166     41    95  0
+  167    112    95  0
+  168    112    63  0
+  169     26    95  0
+  170     26   112  0
+  171     63    95  0
+  172    105    98  0
+  173     35    98  0
+  174     32    98  0
+  175     58    38  0
+  176     58    37  0
+  177     38    13  0
+  178    109    90  0
+  179    109    16  0
+  180     68    16  0
+  181     68    90  0
+  182     68   109  0
+  183     93    62  0
+  184     93    26  -1
+  185     93    22  0
+  186     81    79  0
+  187     12    47  0
+  188     12    46  0
+  189     54    46  0
+  190     54    47  0
+  191     54    12  0
+  192     46    47  -1
+  193    106    38  0
+  194     92    38  0
+  195     38   101  0
+  196     77   118  0
+  197    104   118  0
+  198     54     0  0
+  199     12     0  0
+  200      0    47  -1
+  201     75    74  0
+  202     29    15  0
+  203     29    74  0
+  204     29    75  -1
+  205     15    74  0
+  206     95    93  0
+  207     21    93  0
+  208     21    95  0
+  209     93    92  0
+  210    106    73  0
+  211     18    73  -1
+  212    113    50  0
+  213    113    51  0
+  214     35    51  0
+  215     35    50  0
+  216     35   113  0
+  217     51    50  0
+  218     74    40  0
+  219     18    14  -1
+  220     18    74  0
+  221     14    40  0
+  222     71    14  -1
+  223     88    83  0
+  224     37    83  0
+  225     66    29  0
+  226     66    67  0
+  227     19    67  0
+  228     19    29  0
+  229     19    66  0
+  230     67    29  0
+  231     99    27  0
+  232     27    97  -1
+  233     82    40  -1
+  234     80    79  0
+  235     80    78  0
+  236     26    78  0
+  237     26    79  0
+  238     26    80  0
+  239     95    25  0
+  240     93    25  -1
+  241     21    25  -1
+  242     72    85  0
+  243     54    16  0
+  244     54    55  0
+  245     81    78  0
+  246      7    27  0
+  247      7    78  -1
+  248      7    81  -1
+  249     64    16  0
+  250     64    68  0
+  251     32    68  0
+  252     32    64  0
+  253     18    79  0
+  254     10   108  0
+  255     10     6  -1
+  256    111     6  0
+  257    111   108  0
+  258    111    10  -1
+  259      6   108  -1
+  260     56   106  0
+  261     56    38  0
+  262     61    38  0
+  263     61   106  0
+  264     64    31  0
+  265     64    70  0
+  266     32    70  0
+  267     32    31  0
+  268     70    31  0
+  269     12    16  -1
+  270    110    78  0
+  271    110     7  -1
+  272     27   110  0
+  273     70    47  0
+  274     70    12  0
+  275      0    70  0
+  276     17    58  0
+  277     17    59  0
+  278     38    59  0
+  279     38    17  -1
+  280     59    58  0
+  281     81    28  -1
+  282     23    28  0
+  283     28    79  0
+  284     85    82  0
+  285     82    60  0
+  286     15    19  -1
+  287     80    63  0
+  288     80    22  0
+  289    100    24  0
+  290    100    20  0
+  291     48    20  0
+  292     48    24  0
+  293     48   100  0
+  294     20    24  -1
+  295     13    43  0
+  296     13    52  0
+  297     17    52  0
+  298     17    43  0
+  299     17    13  -1
+  300     52    43  0
+  301     77    93  0
+  302     77    94  0
+  303     77   112  0
+  304     17    51  0
+  305     35    52  0
+  306     35    17  -1
+  307     52    51  0
+  308     50    34  0
+  309     50    52  0
+  310     35    34  0
+  311     52    34  0
+  312     58    43  0
+  313     43    44  -1
+  314    117   106  0
+  315    117    22  0
+  316     62   106  0
+  317     62   117  0
+  318     63    39  0
+  319     22    39  0
+  320     39    62  0
+  321     37    71  0
+  322     37    87  0
+  323     83    87  0
+  324     87    71  0
+  325     80    39  -1
+  326     77    26  -1
+  327     79    22  0
+  328     74    71  0
+  329    113   105  0
+  330    103    35  0
+  331    103   105  0
+  332    103   113  0
+  333     24    97  -1
+  334     20    97  0
+  335     75    67  0
+  336     15    67  0
+  337     97    23  0
+  338     99    23  0
+  339     49   118  0
+  340     33    34  0
+  341     33    53  0
+  342     86    33  0
+  343    108    78  0
+  344    108    26  0
+  345      6    26  0
+  346      6    78  -1
+  347     62    92  0
+  348     62    95  0
+  349     62    96  0
+  350    117    79  0
+  351     18   117  0
+  352     35    76  0
+  353    103    76  0
+  354    103    98  0
+  355     76    98  0
+  356     12    35  0
+  357     54    35  0
+  358     50    53  0
+  359     54    34  0
+  360     54    53  0
+  361     54    50  0
+  362     83    31  0
+  363     30    87  0
+  364     30    31  0
+  365     30    83  0
+  366     87    31  0
+  367    117    61  0
+  368     57    14  0
+  369     57    36  0
+  370     56    57  0
+  371     56    37  0
+  372     58    57  0
+  373     58    56  0
+  374     59    56  0
+  375     13    34  -1
+  376     13    35  0
+  377     49    28  0
+  378     98    23  -1
+  379     98    97  0
+  380     99    98  0
+  381     85     2  -1
+  382     70    16  0
+  383    116    24  0
+  384    119    69  0
+  385    119    30  -1
+  386     31    69  0
+  387     31   119  0
+  388     30    69  0
+  389     52    44  0
+  390      1    52  0
+  391     65    23  0
+  392     65   114  0
+  393     99   114  0
+  394     99    65  0
+  395     64    66  0
+  396     64    67  0
+  397     19    64  0
+  398    114    98  0
+  399    114    76  0
+  400     32    76  0
+  401     32   114  0
+  402     27   118  0
+  403     74   117  0
+  404    110   104  -1
+  405     77   110  0
+  406     78   104  0
+  407     55   109  0
+  408     98   100  0
+  409     98    20  -1
+  410    101    17  0
+  411    101    59  0
+  412     53    52  0
+  413     52    33  0
+  414     41    21  0
+  415     68    46  0
+  416      1    88  0
+  417      1    36  -1
+  418     18    38  -1
+  419    120   115  0
+  420    120    25  -1
+  421    107    25  0
+  422    107   115  0
+  423    107   120  0
+  424     25   115  0
+  425    102    74  0
+  426    102    29  -1
+  427    119    12  0
+  428    119    70  0
+  429     69    70  0
+  430     69    12  0
+  431    118   110  0
+  432     59    43  0
+  433     86    83  0
+  434     86    87  0
+  435     30    86  0
+  436    109    64  0
+  437     32   109  0
+  438    121    54  0
+  439    121    12  0
+  440     53   121  0
+  441     68    70  0
+  442     19    32  -1
+  443     67    32  0
+  444     17   113  0
+  445    117    40  -1
+  446     49   110  0
+  447     93   120  0
+  448    120    94  0
+  449    102    79  0
+  450     67    31  0
+  451     67    30  0
+  452     67    69  0
+  453     20    45  0
+  454     98    45  0
+  455     45   100  0
+  456     22    92  -1
+  457     15    32  0
+  458     42    21  0
+  459     42    41  -1
+  460     42    95  0
+  461    102    66  0
+  462     32    12  0
+  463     65   102  0
+  464     88    52  0
+  465     88    34  0
+  466     59    91  0
+  467     43    91  -1
+  468     91    17  0
+  469     70    46  0
+  470     31    86  0
+  471     12    31  -1
+  472      3    84  -1
+  473     75    84  0
+  474     15    31  -1
+  475     69    64  0
+  476     30    15  0
+  477     80     6  -1
+  478     84    67  0
+  479     30    84  -1
+  480    114   109  0
+  481     98   109  0
+  482     99   109  0
+  483     20   109  0
+  484     45   109  0
+  485     64   114  0
+  486    110    11  0
+  487    111     7  0
+  488    111    11  -1
+  489    111   110  0
+  490      7    11  -1
+  491     15    73  0
+  492     14    73  0
+  493     73    71  0
+  494     39    79  0
+  495     99    45  0
+  496    115    42  0
+  497     93    42  0
+  498     42    25  0
+  499      6    63  0
+  500    112   108  0
+  501     77   108  0
+  502     38    35  0
+  503     38    73  0
+  504     38    76  0
+  505     35    73  0
+  506     32    73  0
+  507     95   115  0
+  508     22    77  0
+  509     77    76  0
+  510     77    23  0
+  511      7    49  0
+  512     58    36  0
+  513     87    12  0
+  514     34    87  0
+  515     87    15  0
+  516     43    51  0
+  517     33    88  0
+  518     88    86  0
+  519     76    92  0
+  520     88    87  0
+  521     33     1  -1
+  522     34    37  0
+  523     28   102  -1
+  524    121    33  -1
+  525     86   121  0
+  526      0   119  -1
+  527     49    65  0
+  528     28    65  0
+  529     56   101  0
+  530    105    55  0
+  531     35    55  0
+  532     92    35  0
+  533     94   108  -1
+  534     50    55  0
+  535     50   105  0
+  536    105   109  0
+  537     42   107  -1
+  538     78    94  0
+  539    111    78  0
+  540    116    94  0
+  541      4   104  -1
+  542      4   116  0
+  543     94   104  0
+  544     66    32  0
+  545    105    20  0
+  546     20   103  -1
+  547    101    91  0
+  548    101    41  0
+  549    108    63  0
+  550    119    86  0
+  551    121     0  -1
+  552     45    48  -1
+  553     51   101  0
+  554     51    91  0
+  555    116    48  0
+  556    103    92  0
+  557     41    91  -1
+  558     21    91  0
+  559    107    94  0
+  560     66   114  0
+  561    117    39  -1
+  562    111   104  0
+  563      8    11  -1
+  564      8   104  0
+  565     11   104  0
+  566    121   119  0
+  567     20    90  0
+  568     45    90  -1
+  569     90   105  0
+  570     10     9  -1
+  571     10    94  0
+  572      9    94  0
+  573      9     5  -1
+  574    113   101  0
+  575    113    91  0
+  576     21   113  0
+  577     92   113  0
+  578    113    38  0
+  579     21   103  -1
+  580    114    73  0
+  581    116    93  0
+  582    120   116  0
+  583    120    77  0
+  584    120    97  0
+  585    116     5  0
+  586    116    89  0
+  587     48    89  -1
+  588     24    89  0
+  589    107     4  0
+  590    107    89  0
+  591    107   116  0
+  592      4    89  -1
+  593    107     5  -1
+  594    120    24  -1
+  595    120    89  0
+# Generated by tetgen -nfezpq example.poly 
